// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders horizontal by default 1`] = `
<div>
  <hr
    aria-orientation="horizontal"
    class="mat-divider"
    role="none"
  />
</div>
`;

exports[`Separator renders vertical when specified 1`] = `
<div>
  <hr
    aria-orientation="vertical"
    class="mat-divider mat-divider-vertical"
    role="none"
  />
</div>
`;
